2005-11-28  Julien MOUTTE  <julien@moutte.net>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_new):
	Refuse to create an XvImage if we can't find the format.

2005-11-28  Edward Hervey  <edward@fluendo.com>

	* gst-libs/gst/riff/riff-media.c:
	(gst_riff_create_audio_template_caps):
	Add ATRAC3 to the list of riff-possible audio caps.
	I know we still don't have a plugin for atrac3, but it's saner to output
	that than a cryptic mimetype.

2005-11-27  Edward Hervey  <edward@fluendo.com>

	* gst-libs/gst/riff/riff-read.c: (gst_riff_parse_strf_auds):
	Don't try to create a zero-sized subbuffer.

2005-11-27  Julien MOUTTE  <julien@moutte.net>

	* sys/ximage/ximagesink.c: (gst_ximage_buffer_free),
	(gst_ximagesink_ximage_new), (gst_ximagesink_ximage_put),
	(gst_ximagesink_bufferpool_clear), (gst_ximagesink_buffer_alloc),
	(gst_ximagesink_expose): Fixed a tricky race.
	* sys/ximage/ximagesink.h:
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_put),
	(gst_xvimagesink_expose): Fixed a tricky race.
	* sys/xvimage/xvimagesink.h:

2005-11-27  Edward Hervey  <edward@fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_class_init),
	(gst_decode_bin_init), (close_pad_link), (try_to_link_1):
	Remove unused properties, and add queues between demuxers and decoders
	so that a lot more files can preroll properly.

2005-11-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/net/Makefile.am:
	* gst-libs/gst/rtp/Makefile.am:
	* gst-libs/gst/tag/Makefile.am:
	  remove silly include
	* gst/tags/Makefile.am:
	* gst/tags/gsttagediting.c:
	* gst/tags/gsttageditingprivate.h:
	* gst/tags/tagedit.vcproj:
	  remove directory, is as good as empty

2005-11-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  added GST_LIB_LDFLAGS and GST_ALL_LDFLAGS
	* gst-libs/Makefile.am:
	* gst-libs/gst/audio/Makefile.am:
	* gst-libs/gst/interfaces/Makefile.am:
	* gst-libs/gst/net/Makefile.am:
	* gst-libs/gst/riff/Makefile.am: